# Visual-guided-Dual-Arm-Synchronization-with-Decentralized-Control

./: README.md
src/dualarm_bringup/: CMakeLists.txt  package.xml
src/dualarm_bringup/config/: panda_controllers.yaml  ur_controllers.yaml
src/dualarm_bringup/worlds/: dual_table.sdf
src/dualarm_control/: CMakeLists.txt  package.xml  requirements.txt
src/dualarm_control/launch/: integrated_system.launch.py
src/dualarm_control/scripts/: robot_a_controller.py  robot_b_controller.py  system_coordinator.py  vision_processor.py
src/dualarm_description/: CMakeLists.txt  package.xml
src/dualarm_description/urdf/: dualarm_system.urdf  dualarm_system.xacro  panda_with_camera.xacro  ur5e_with_gripper.xacro
src/dualarm_moveit_config/: CMakeLists.txt  package.xml
src/dualarm_moveit_config/config/: dualarm.xml  kinematics.yaml  moveit_controllers.yaml
src/dualarm_moveit_config/launch/: moveit.launch.py
