<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dualarm_description</name>
  <version>1.0.0</version>
  <description>Dual arm robot descriptions</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ur_description</depend>
  <depend>moveit_resources_panda_description</depend>
  <depend>xacro</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>